@@ -18,24 +18,25 @@
 
 package eu.fasten.core.data.graphdb;
 
+import static eu.fasten.core.utils.VariableLengthByteCoder.readLong;
+import static eu.fasten.core.utils.VariableLengthByteCoder.readString;
+import static eu.fasten.core.utils.VariableLengthByteCoder.writeLong;
+import static eu.fasten.core.utils.VariableLengthByteCoder.writeString;
+
 import java.io.Closeable;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Properties;
+import java.util.*;
+import java.util.stream.Collectors;
 
-import eu.fasten.core.data.metadatadb.codegen.tables.PackageVersions;
-import eu.fasten.core.dbconnectors.PostgresConnector;
 import org.apache.commons.io.FileUtils;
-import org.jooq.DSLContext;
-import org.jooq.Record1;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.math3.util.Pair;
 import org.rocksdb.ColumnFamilyDescriptor;
 import org.rocksdb.ColumnFamilyHandle;
 import org.rocksdb.ColumnFamilyOptions;
+import org.rocksdb.CompressionType;
 import org.rocksdb.DBOptions;
 import org.rocksdb.RocksDB;
 import org.rocksdb.RocksDBException;
@@ -53,15 +54,22 @@ import eu.fasten.core.data.ArrayImmutableDirectedGraph;
 import eu.fasten.core.data.ArrayImmutableDirectedGraph.Builder;
 import eu.fasten.core.data.Constants;
 import eu.fasten.core.data.DirectedGraph;
+import eu.fasten.core.data.FastenJavaURI;
 import eu.fasten.core.data.GOV3LongFunction;
+import eu.fasten.core.data.graphdb.GraphMetadata.NodeMetadata;
+import eu.fasten.core.data.graphdb.GraphMetadata.ReceiverRecord;
+import eu.fasten.core.data.graphdb.GraphMetadata.ReceiverRecord.CallType;
+import eu.fasten.core.data.metadatadb.codegen.tables.records.CallSitesRecord;
 import eu.fasten.core.index.BVGraphSerializer;
 import eu.fasten.core.index.LayeredLabelPropagation;
 import eu.fasten.core.legacy.KnowledgeBase;
 import it.unimi.dsi.Util;
+import it.unimi.dsi.fastutil.io.FastByteArrayInputStream;
 import it.unimi.dsi.fastutil.io.FastByteArrayOutputStream;
 import it.unimi.dsi.fastutil.longs.Long2IntOpenHashMap;
 import it.unimi.dsi.fastutil.longs.Long2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.longs.LongArrayList;
+import it.unimi.dsi.fastutil.longs.LongIterator;
 import it.unimi.dsi.fastutil.longs.LongIterators;
 import it.unimi.dsi.fastutil.longs.LongLinkedOpenHashSet;
 import it.unimi.dsi.fastutil.longs.LongOpenHashSet;
@@ -76,10 +84,16 @@ import it.unimi.dsi.webgraph.Transform;
 
 public class RocksDao implements Closeable {
 
+    private final static byte[] METADATA_COLUMN_FAMILY = "metadata".getBytes();
     private final RocksDB rocksDb;
     private final ColumnFamilyHandle defaultHandle;
+    private ColumnFamilyHandle metadataHandle;
     private Kryo kryo;
     private final static Logger logger = LoggerFactory.getLogger(RocksDao.class.getName());
+
+    public RocksDao(final String dbDir, final boolean readOnly) throws RocksDBException {
+        this(dbDir, readOnly, false);
+    }
 
     /**
      * Constructor of RocksDao (Database Access Object).
@@ -87,19 +101,27 @@ public class RocksDao implements Closeable {
      * @param dbDir Directory where RocksDB data will be stored
      * @throws RocksDBException if there is an error loading or opening RocksDB instance
      */
-    public RocksDao(final String dbDir, final boolean readOnly) throws RocksDBException {
+    public RocksDao(final String dbDir, final boolean readOnly, final boolean onlyDefaultColumnFamily) throws RocksDBException {    // TODO: Remove onlyDefaultColumnFamily
         RocksDB.loadLibrary();
-        final ColumnFamilyOptions cfOptions = new ColumnFamilyOptions();
+		final ColumnFamilyOptions defaultOptions = new ColumnFamilyOptions();
+        ColumnFamilyOptions metadataOptions = null;
+        if (!onlyDefaultColumnFamily) {
+            metadataOptions = new ColumnFamilyOptions().setCompressionType(CompressionType.ZSTD_COMPRESSION);
+        }
         @SuppressWarnings("resource") final DBOptions dbOptions = new DBOptions()
                 .setCreateIfMissing(true)
                 .setCreateMissingColumnFamilies(true);
-        final List<ColumnFamilyDescriptor> cfDescriptors = Collections.singletonList(
-                new ColumnFamilyDescriptor(RocksDB.DEFAULT_COLUMN_FAMILY, cfOptions));
+		final List<ColumnFamilyDescriptor> cfDescriptors = onlyDefaultColumnFamily ?
+                List.of(new ColumnFamilyDescriptor(RocksDB.DEFAULT_COLUMN_FAMILY, defaultOptions)) :
+                List.of(new ColumnFamilyDescriptor(RocksDB.DEFAULT_COLUMN_FAMILY, defaultOptions), new ColumnFamilyDescriptor(METADATA_COLUMN_FAMILY, metadataOptions));
         final List<ColumnFamilyHandle> columnFamilyHandles = new ArrayList<>();
         this.rocksDb = readOnly
                 ? RocksDB.openReadOnly(dbOptions, dbDir, cfDescriptors, columnFamilyHandles)
                 : RocksDB.open(dbOptions, dbDir, cfDescriptors, columnFamilyHandles);
         this.defaultHandle = columnFamilyHandles.get(0);
+        if (!onlyDefaultColumnFamily) {
+            this.metadataHandle = columnFamilyHandles.get(1);
+        }
         initKryo();
     }
 
@@ -121,39 +143,97 @@ public class RocksDao implements Closeable {
         kryo.register(GOV3LongFunction.class, new JavaSerializer());
     }
 
-    public void saveToRocksDb(final GidGraph gidGraph) throws IOException, RocksDBException {
-        if (gidGraph instanceof ExtendedGidGraph) {
-            System.out.println("GID Graph has the edges info for stitching");
+    private GraphMetadata.ReceiverRecord.CallType transformCallType(eu.fasten.core.data.metadatadb.codegen.enums.CallType type) {
+        switch (type) {
+            case dynamic:
+                return CallType.DYNAMIC;
+            case special:
+                return CallType.SPECIAL;
+            case static_:
+                return CallType.STATIC;
+            case interface_:
+                return CallType.INTERFACE;
+            case virtual:
+                return CallType.VIRTUAL;
+            default:
+                return null;
         }
-        saveToRocksDb(gidGraph.getIndex(), gidGraph.getNodes(), gidGraph.getNumInternalNodes(), gidGraph.getEdges());
+    }
+
+    public void saveToRocksDb(final GidGraph gidGraph) throws IOException, RocksDBException {
+        // Save and obtain graph
+        final DirectedGraph graph = saveToRocksDb(gidGraph.getIndex(), gidGraph.getNodes(), gidGraph.getNumInternalNodes(), gidGraph.getEdges());
+        if (gidGraph instanceof ExtendedGidGraph) {
+            // Save metadata
+			final ExtendedGidGraph extendedGidGraph = (ExtendedGidGraph)gidGraph;
+
+			final Map<Pair<Long, Long>, CallSitesRecord> edgesInfo = extendedGidGraph.getCallsInfo();
+			final Map<Long, String> typeMap = extendedGidGraph.getTypeMap();
+            final Long2ObjectOpenHashMap<List<ReceiverRecord>> map = new Long2ObjectOpenHashMap<>();
+
+            final Map<Long, String> gidToUriMap = extendedGidGraph.getGidToUriMap();
+
+            // Gather data by source and store it in lists of GraphMetadata.ReceiverRecord.
+            edgesInfo.forEach((pair, record) -> map.compute(pair.getFirst().longValue(), (k, list) -> {
+                if (list == null) list = new ArrayList<>();
+                list.add(new ReceiverRecord(record.getLine(), transformCallType(record.getCallType()), gidToUriMap.get(pair.getFirst()), Arrays.stream(record.getReceiverTypeIds()).map(typeMap::get).collect(Collectors.toList())));
+                return list;
+            }));
+
+
+            // Serialize information in compact form, following the standard node enumeration order
+            final FastByteArrayOutputStream fbaos = new FastByteArrayOutputStream();
+			for (final LongIterator iterator = graph.iterator(); iterator.hasNext();) {
+                final long node = iterator.nextLong();
+
+                final FastenJavaURI uri = FastenJavaURI.create(gidToUriMap.get(node)).decanonicalize();
+                writeString("/" + uri.getNamespace() + "/" + uri.getClassName(), fbaos);
+                writeString(StringUtils.substringAfter(uri.getEntity(), "."), fbaos);
+
+				final List<ReceiverRecord> list = map.get(node);
+                // TODO: is this acceptable behavior?
+                if (list == null) writeLong(0, fbaos); // no data
+                else {
+                    // Encode list length
+                    writeLong(list.size(), fbaos);
+                    // Encode elements
+					for (final var r : list) {
+                        writeLong(r.line, fbaos);
+                        writeLong(r.callType.ordinal(), fbaos);
+						writeString(r.receiverSignature, fbaos);
+						writeLong(r.receiverTypes.size(), fbaos);
+						for (final String s : r.receiverTypes) writeString(s, fbaos);
+                    }
+                }
+            }
+			rocksDb.put(metadataHandle, Longs.toByteArray(gidGraph.getIndex()), 0, 8, fbaos.array, 0, fbaos.length);
+		}
     }
 
     /**
-     * Inserts graph (nodes and edges) into RocksDB database.
-     *
-     * @param index       Index of the graph (ID from postgres)
-     * @param nodes       List of GID nodes (first internal nodes, then external nodes)
-     * @param numInternal Number of internal nodes in nodes list
-     * @param edges       List of edges (pairs of GIDs)
-     * @throws IOException      if there was a problem writing to files
-     * @throws RocksDBException if there was a problem inserting in the database
-     */
-    public void saveToRocksDb(final long index, List<Long> nodes, int numInternal, final List<List<Long>> edges)
+	 * Inserts graph (nodes and edges) into RocksDB database.
+	 *
+	 * @param index Index of the graph (ID from postgres)
+	 * @param nodes List of GID nodes (first internal nodes, then external nodes)
+	 * @param numInternal Number of internal nodes in nodes list
+	 * @param edges List of edges (pairs of GIDs)
+	 * @return the stored {@link DirectedGraph}, or {@code null} if the provided index key is already
+	 *         present.
+	 * @throws IOException if there was a problem writing to files
+	 * @throws RocksDBException if there was a problem inserting in the database
+	 */
+    public DirectedGraph saveToRocksDb(final long index, List<Long> nodes, int numInternal, final List<List<Long>> edges)
             throws IOException, RocksDBException {
-        if (this.getGraphData(index) != null) {
-            logger.info("Graph with index {} is already in the database", index);
-            return;
-        }
-        var internalIds = new LongArrayList(numInternal);
-        var externalIds = new LongArrayList(nodes.size() - numInternal);
+        final var internalIds = new LongArrayList(numInternal);
+        final var externalIds = new LongArrayList(nodes.size() - numInternal);
         for (int i = 0; i < numInternal; i++) {
             internalIds.add(nodes.get(i).longValue());
         }
         for (int i = numInternal; i < nodes.size(); i++) {
             externalIds.add(nodes.get(i).longValue());
         }
-        var internalNodesSet = new LongLinkedOpenHashSet(internalIds);
-        var externalNodesSet = new LongLinkedOpenHashSet(externalIds);
+        final var internalNodesSet = new LongLinkedOpenHashSet(internalIds);
+        final var externalNodesSet = new LongLinkedOpenHashSet(externalIds);
         numInternal = internalNodesSet.size();
         nodes = new LongArrayList(internalNodesSet.size() + externalNodesSet.size());
         nodes.addAll(internalNodesSet);
@@ -190,6 +270,7 @@ public class RocksDao implements Closeable {
             bbo.flush();
             // Write to DB
             rocksDb.put(defaultHandle, Longs.toByteArray(index), 0, 8, fbaos.array, 0, fbaos.length);
+            return graph;
         } else {
             /*
              * In this case we compress the graph: first, we remap GIDs into a compact temporary ID space
@@ -253,7 +334,8 @@ public class RocksDao implements Closeable {
             final FastByteArrayOutputStream fbaos = new FastByteArrayOutputStream();
             final ByteBufferOutput bbo = new ByteBufferOutput(fbaos);
             kryo.writeObject(bbo, Boolean.TRUE);
-            kryo.writeObject(bbo, BVGraph.load(file.toString()));
+            final ImmutableGraph storedGraph = BVGraph.load(file.toString());
+            kryo.writeObject(bbo, storedGraph);
 
             // Compute LIDs according to the current node numbering based on the LLP permutation
             final long[] LID2GID = new long[temporary2GID.length];
@@ -269,7 +351,8 @@ public class RocksDao implements Closeable {
             propertyFile = new FileInputStream(file + BVGraph.PROPERTIES_EXTENSION);
             transposeProperties.load(propertyFile);
             propertyFile.close();
-            kryo.writeObject(bbo, BVGraph.load(file.toString()));
+            final ImmutableGraph storedTranspose = BVGraph.load(file.toString());
+            kryo.writeObject(bbo, storedTranspose);
             kryo.writeObject(bbo, numInternal);
             // Write out properties
             kryo.writeObject(bbo, graphProperties);
@@ -280,9 +363,9 @@ public class RocksDao implements Closeable {
             bbo.flush();
             // Write to DB
             rocksDb.put(defaultHandle, Longs.toByteArray(index), 0, 8, fbaos.array, 0, fbaos.length);
-            var fileProperties = new File(file.toString() + BVGraph.PROPERTIES_EXTENSION);
-            var fileOffsets = new File(file.toString() + BVGraph.OFFSETS_EXTENSION);
-            var fileGraph = new File(file.toString() + BVGraph.GRAPH_EXTENSION);
+			final var fileProperties = new File(file + BVGraph.PROPERTIES_EXTENSION);
+			final var fileOffsets = new File(file + BVGraph.OFFSETS_EXTENSION);
+			final var fileGraph = new File(file + BVGraph.GRAPH_EXTENSION);
             try {
                 FileUtils.forceDelete(fileProperties);
                 FileUtils.forceDelete(fileOffsets);
@@ -302,6 +385,9 @@ public class RocksDao implements Closeable {
                     file.delete();
                 }
             }
+            return new CallGraphData(storedGraph, storedTranspose, graphProperties, transposeProperties,
+                    LID2GID, GID2LID, numInternal, fbaos.length);
+
         }
     }
 
@@ -343,15 +429,69 @@ public class RocksDao implements Closeable {
     }
 
     /**
+     * Retrieves graph metadata from RocksDB database.
+     *
+     * @param index index of the graph
+     * @param graph the graph associated with {@code} index
+     * @return the metadata associated with the graph, or {@code null}
+     * if no metadata record exists for the provided graph
+     * @throws RocksDBException if there was problem retrieving data from RocksDB
+     */
+    public GraphMetadata getGraphMetadata(final long index, final DirectedGraph graph) throws RocksDBException {
+        final byte[] metadata = rocksDb.get(metadataHandle, Longs.toByteArray(index));
+        if (metadata != null) {
+            final Long2ObjectOpenHashMap<NodeMetadata> map = new Long2ObjectOpenHashMap<>();
+
+            final FastByteArrayInputStream fbais = new FastByteArrayInputStream(metadata);
+
+            try {
+                // Deserialize map following the standard node enumeration order
+				for (final LongIterator iterator = graph.iterator(); iterator.hasNext();) {
+                    final long node = iterator.nextLong();
+
+                    final String type = readString(fbais);
+                    final String signature = readString(fbais);
+
+                    final long length = readLong(fbais);
+                    List<ReceiverRecord> list;
+                    if (length == 0) list = Collections.emptyList();
+                    else {
+                        list = new ArrayList<>();
+						for (long i = 0; i < length; i++) {
+							final int line = (int)readLong(fbais);
+							final CallType callType = CallType.values()[(int)readLong(fbais)];
+							final String receiverSignature = readString(fbais);
+							final int size = (int)readLong(fbais);
+							final ArrayList<String> t = new ArrayList<>();
+							for (int j = 0; j < size; j++) t.add(readString(fbais));
+							list.add(new ReceiverRecord(line, callType, receiverSignature, t));
+						}
+                    }
+
+                    // Make the list immutable
+                    map.put(node, new NodeMetadata(type, signature, List.copyOf(list)));
+                }
+            } catch (final IOException cantHappen) {
+                // Not really I/O
+                throw new RuntimeException(cantHappen.getCause());
+            }
+            return new GraphMetadata(map);
+        }
+        return null;
+    }
+
+
+    /**
      * Deletes a graph from the graph database based on its index.
      *
      * @param index Index of thr graph (package_version.id)
      * @return true if deleted successfully, false otherwise
      */
-    public boolean deleteCallGraph(long index) {
+    public boolean deleteCallGraph(final long index) {
         try {
             rocksDb.delete(defaultHandle, Longs.toByteArray(index));
-        } catch (RocksDBException e) {
+            rocksDb.delete(metadataHandle, Longs.toByteArray(index));
+        } catch (final RocksDBException e) {
             logger.error("Could not delete graph with index " + index, e);
             return false;
         }
