@@ -21,12 +21,15 @@ package eu.fasten.core.data.metadatadb;
 import com.github.t9t.jooq.json.JsonbDSL;
 import eu.fasten.core.data.Constants;
 import eu.fasten.core.data.metadatadb.codegen.Keys;
+import eu.fasten.core.data.metadatadb.codegen.enums.Access;
+import eu.fasten.core.data.metadatadb.codegen.enums.CallableType;
 import eu.fasten.core.data.metadatadb.codegen.tables.*;
+import eu.fasten.core.data.metadatadb.codegen.tables.records.CallSitesRecord;
 import eu.fasten.core.data.metadatadb.codegen.tables.records.CallablesRecord;
-import eu.fasten.core.data.metadatadb.codegen.tables.records.EdgesRecord;
 import eu.fasten.core.data.metadatadb.codegen.tables.records.IngestedArtifactsRecord;
-import eu.fasten.core.data.metadatadb.codegen.udt.records.ReceiverRecord;
 import eu.fasten.core.maven.data.PackageVersionNotFoundException;
+import eu.fasten.core.maven.data.Revision;
+import eu.fasten.core.maven.utils.MavenUtilities;
 import eu.fasten.core.utils.FastenUriUtils;
 import org.apache.commons.math3.util.Pair;
 import org.jooq.*;
@@ -35,14 +38,13 @@ import org.json.JSONException;
 import org.json.JSONObject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
 import java.sql.Timestamp;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.jooq.impl.DSL.*;
 
 public class MetadataDao {
-
     private final Logger logger = LoggerFactory.getLogger(MetadataDao.class.getName());
     private DSLContext context;
 
@@ -179,6 +181,81 @@ public class MetadataDao {
     }
 
     /**
+     * Inserts outbound licenses at the package version level.
+     *
+     * @param coordinates the coordinates whose outbound licenses are about to be inserted.
+     * @param outboundLicenses the package version's outbound licenses.
+     * @return the updated metadata field.
+     */
+    public String insertPackageOutboundLicenses(Revision coordinates,
+                                                String outboundLicenses) {
+        return insertPackageOutboundLicenses(
+                coordinates.groupId,
+                coordinates.artifactId,
+                coordinates.version.toString(), // FIXME
+                outboundLicenses);
+    }
+
+    /**
+     * Inserts outbound licenses at the package version level.
+     *
+     * @param groupId          the group ID of the package version whose outbound licenses are about to be inserted.
+     * @param artifactId       the artifact ID of the package version whose outbound licenses are about to be inserted.
+     * @param packageVersion   the package version whose outbound licenses are about to be inserted.
+     * @param outboundLicenses the package version's outbound licenses.
+     * @return the updated metadata field.
+     */
+    public String insertPackageOutboundLicenses(String groupId,
+                                                String artifactId,
+                                                String packageVersion,
+                                                String outboundLicenses) {
+        return insertPackageOutboundLicenses(
+                MavenUtilities.getMavenCoordinateName(groupId, artifactId),
+                packageVersion,
+                outboundLicenses);
+    }
+
+    /**
+     * Inserts outbound licenses at the package version level.
+     *
+     * @param packageName      the package name whose outbound licenses are about to be inserted.
+     * @param packageVersion   the package version whose outbound licenses are about to be inserted.
+     * @param outboundLicenses the package version's outbound licenses.
+     * @return the updated metadata field.
+     */
+    public String insertPackageOutboundLicenses(String packageName, String packageVersion, String outboundLicenses) {
+
+        /*  Warning!
+            The `concat()` method casts the first argument to `VARCHAR`, causing errors!
+
+            Packages p = Packages.PACKAGES;
+            PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
+            Record updatedMetadata = context.update(pv)
+                    .set(
+                            pv.METADATA,
+                            when(pv.METADATA.isNull(), JSONB.valueOf("{}")).otherwise(pv.METADATA)
+                                    .concat(outboundLicenses).cast(SQLDataType.JSONB)
+                    )
+                    .from(p)
+                    .where(p.ID.eq(pv.PACKAGE_ID).and(packageVersionWhereClause(packageName, packageVersion)))
+                    .returning(pv.METADATA)
+                    .fetchOne();
+        */
+        // Using plain SQL
+        Object updatedMetadata = context.fetchValue("UPDATE package_versions pv\n" +
+                "SET metadata = (CASE WHEN metadata IS NULL THEN '{}'::jsonb ELSE metadata END) || {0}\n" +
+                "    FROM packages p\n" +
+                "WHERE p.id = pv.package_id\n" +
+                "  AND p.package_name = LOWER({1})\n" +
+                "  AND pv.version = LOWER({2})\n" +
+                "    RETURNING pv.metadata;", JSONB.valueOf(outboundLicenses), packageName, packageVersion);
+
+        // Updated metadata field
+        assert updatedMetadata != null; // FIXME
+        return updatedMetadata.toString();
+    }
+
+    /**
      * Inserts multiple records in the 'package_versions' table in the database.
      *
      * @param packageId     ID of the common package (references 'packages.id')
@@ -251,40 +328,6 @@ public class MetadataDao {
     }
 
     /**
-     * Inserts multiple 'dependencies' in the database for certain package.
-     *
-     * @param packageVersionId  ID of the package version
-     * @param dependenciesIds   List of IDs of dependencies
-     * @param versionRanges     List of version ranges
-     * @param architectures     List of architectures of the dependencies
-     * @param dependencyTypes   List of types of the dependencies
-     * @param alternativeGroups List of alternative dependencies group
-     * @param metadata          List of metadata
-     * @return ID of the package (packageId)
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public long insertDependencies(long packageVersionId, List<Long> dependenciesIds,
-                                   List<String[]> versionRanges, List<String[]> architectures,
-                                   List<String[]> dependencyTypes, List<Long> alternativeGroups,
-                                   List<JSONObject> metadata)
-            throws IllegalArgumentException {
-        if (dependenciesIds.size() != versionRanges.size()
-                || versionRanges.size() != architectures.size()
-                || architectures.size() != dependencyTypes.size()
-                || dependencyTypes.size() != alternativeGroups.size()
-                || alternativeGroups.size() != metadata.size()) {
-            throw new IllegalArgumentException("All lists should have equal size");
-        }
-        int length = dependenciesIds.size();
-        for (int i = 0; i < length; i++) {
-            insertDependency(packageVersionId, dependenciesIds.get(i), versionRanges.get(i),
-                    architectures.get(i), dependencyTypes.get(i), alternativeGroups.get(i),
-                    metadata.get(i));
-        }
-        return packageVersionId;
-    }
-
-    /**
      * Inserts a record in 'virtual_implementations' table in the database.
      *
      * @param virtualPackageVersionId ID of the virtual implementation of package version
@@ -308,49 +351,31 @@ public class MetadataDao {
     }
 
     /**
-     * Inserts multiple 'virtual_implementations' in the database.
-     *
-     * @param virtualPackageVersionIds List of IDs of virtual package versions
-     * @param packageVersionIds        List of IDs of package versions
-     * @return List of virtual package version IDs from the database
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public List<Long> insertVirtualImplementations(List<Long> virtualPackageVersionIds,
-                                                   List<Long> packageVersionIds) {
-        if (virtualPackageVersionIds.size() != packageVersionIds.size()) {
-            throw new IllegalArgumentException("Lists should have equal size");
-        }
-        int length = virtualPackageVersionIds.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertVirtualImplementation(virtualPackageVersionIds.get(i),
-                    packageVersionIds.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
-    }
-
-    /**
      * Inserts a record in 'modules' table in the database.
      *
      * @param packageVersionId ID of the package version where the module belongs
      *                         (references 'package_versions.id')
-     * @param namespace        Namespace of the module
-     * @param createdAt        Timestamp when the module was created
+     * @param namespace_id     ID of the namespace of the module (references 'namespaces.id`)
      * @param metadata         Metadata of the module
+     * @param annotations      Annotations of the class and their values
      * @return ID of the new record
      */
-    public long insertModule(long packageVersionId, String namespace,
-                             Timestamp createdAt, JSONObject metadata) {
+    public long insertModule(long packageVersionId, long namespace_id, Boolean isFinal, Access access,
+                             Long[] superClasses, Long[] superInterfaces, JSONObject metadata, JSONObject annotations) {
         var metadataJsonb = metadata != null ? JSONB.valueOf(metadata.toString()) : null;
+        var annotationsJsonb = annotations != null ? JSONB.valueOf(annotations.toString()) : null;
         var resultRecord = context.insertInto(Modules.MODULES,
-                Modules.MODULES.PACKAGE_VERSION_ID, Modules.MODULES.NAMESPACE,
-                Modules.MODULES.CREATED_AT, Modules.MODULES.METADATA)
-                .values(packageVersionId, namespace, createdAt, metadataJsonb)
+                Modules.MODULES.PACKAGE_VERSION_ID, Modules.MODULES.MODULE_NAME_ID,
+                Modules.MODULES.FINAL, Modules.MODULES.ACCESS, Modules.MODULES.SUPER_CLASSES,
+                Modules.MODULES.SUPER_INTERFACES, Modules.MODULES.METADATA, Modules.MODULES.ANNOTATIONS)
+                .values(packageVersionId, namespace_id, isFinal, access, superClasses, superInterfaces, metadataJsonb, annotationsJsonb)
                 .onConflictOnConstraint(Keys.UNIQUE_VERSION_NAMESPACE).doUpdate()
-                .set(Modules.MODULES.CREATED_AT, Modules.MODULES.as("excluded").CREATED_AT)
-                .set(Modules.MODULES.METADATA, JsonbDSL.concat(Modules.MODULES.METADATA,
-                        Modules.MODULES.as("excluded").METADATA))
+                .set(Modules.MODULES.FINAL, Modules.MODULES.as("excluded").FINAL)
+                .set(Modules.MODULES.ACCESS, Modules.MODULES.as("excluded").ACCESS)
+                .set(Modules.MODULES.SUPER_CLASSES, Modules.MODULES.as("excluded").SUPER_CLASSES)
+                .set(Modules.MODULES.SUPER_INTERFACES, Modules.MODULES.as("excluded").SUPER_INTERFACES)
+                .set(Modules.MODULES.METADATA, field("coalesce(modules.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
+                .set(Modules.MODULES.ANNOTATIONS, field("coalesce(modules.annotations, '{}'::jsonb) || excluded.annotations", JSONB.class))
                 .returning(Modules.MODULES.ID).fetchOne();
         return resultRecord.getValue(Modules.MODULES.ID);
     }
@@ -360,21 +385,19 @@ public class MetadataDao {
      *
      * @param packageVersionId ID of the package version where the module belongs
      *                         (references 'package_versions.id')
-     * @param namespace        Namespace of the module
-     * @param createdAt        Timestamp when the module was created
+     * @param namespace_id     ID of the namespace of the module (references 'namespaces.id`)
      * @param metadata         Metadata of the module
      * @return ID of the new record
      */
-    public long insertModule(long packageVersionId, String namespace,
-                             Timestamp createdAt, JSONObject metadata,
+    public long insertModule(long packageVersionId, long namespace_id,
+                             JSONObject metadata,
                              boolean addDuplicates) {
         var metadataJsonb = metadata != null ? JSONB.valueOf(metadata.toString()) : null;
         var resultRecord = context.insertInto(Modules.MODULES,
-                Modules.MODULES.PACKAGE_VERSION_ID, Modules.MODULES.NAMESPACE,
-                Modules.MODULES.CREATED_AT, Modules.MODULES.METADATA)
-                .values(packageVersionId, namespace, createdAt, metadataJsonb)
+                Modules.MODULES.PACKAGE_VERSION_ID, Modules.MODULES.MODULE_NAME_ID,
+                Modules.MODULES.METADATA)
+                .values(packageVersionId, namespace_id, metadataJsonb)
                 // FIXME
-                /* .set(Modules.MODULES.CREATED_AT, Modules.MODULES.as("excluded").CREATED_AT) */
                 // .set(Modules.MODULES.METADATA, JsonbDSL.concat(Modules.MODULES.METADATA,
                 /* Modules.MODULES.as("excluded").METADATA)) */
                 .returning(Modules.MODULES.ID).fetchOne();
@@ -390,32 +413,6 @@ public class MetadataDao {
             return -1L;
         }
         return res.getValue(ModuleContents.MODULE_CONTENTS.MODULE_ID);
-    }
-
-    /**
-     * Inserts multiple records in the 'modules' table in the database.
-     *
-     * @param packageVersionId ID of the common package version
-     * @param namespacesList   List of namespaces
-     * @param createdAt        List of timestamps
-     * @param metadata         List of metadata objects
-     * @return List of IDs of new records
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public List<Long> insertModules(long packageVersionId, List<String> namespacesList,
-                                    List<Timestamp> createdAt, List<JSONObject> metadata)
-            throws IllegalArgumentException {
-        if (namespacesList.size() != createdAt.size() || createdAt.size() != metadata.size()) {
-            throw new IllegalArgumentException("All lists should have equal size");
-        }
-        int length = namespacesList.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertModule(packageVersionId, namespacesList.get(i),
-                    createdAt.get(i), metadata.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
     }
 
     /**
@@ -446,32 +443,6 @@ public class MetadataDao {
     }
 
     /**
-     * Inserts multiple records in the 'binary_modules' table in the database.
-     *
-     * @param packageVersionId ID of the common package version
-     * @param namesList        List of names
-     * @param createdAt        List of timestamps
-     * @param metadata         List of metadata objects
-     * @return List of IDs of new records
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public List<Long> insertBinaryModules(long packageVersionId, List<String> namesList,
-                                          List<Timestamp> createdAt, List<JSONObject> metadata)
-            throws IllegalArgumentException {
-        if (namesList.size() != createdAt.size() || createdAt.size() != metadata.size()) {
-            throw new IllegalArgumentException("All lists should have equal size");
-        }
-        int length = namesList.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertBinaryModule(packageVersionId, namesList.get(i), createdAt.get(i),
-                    metadata.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
-    }
-
-    /**
      * Inserts a record in 'module_contents' table in the database.
      *
      * @param moduleId ID of the module (references 'modules.id')
@@ -491,28 +462,6 @@ public class MetadataDao {
     }
 
     /**
-     * Inserts multiple records in the 'module_contents' table in the database.
-     *
-     * @param moduleIds List of modules IDs
-     * @param fileIds   List of files IDs
-     * @return List of IDs of new records
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public List<Long> insertModuleContents(List<Long> moduleIds, List<Long> fileIds)
-            throws IllegalArgumentException {
-        if (moduleIds.size() != fileIds.size()) {
-            throw new IllegalArgumentException("Lists should have equal size");
-        }
-        int length = fileIds.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertModuleContent(moduleIds.get(i), fileIds.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
-    }
-
-    /**
      * Inserts a record in 'binary_module_contents' table in the database.
      *
      * @param binaryModuleId ID of the binary module (references 'binary_modules.id')
@@ -529,28 +478,6 @@ public class MetadataDao {
                         BinaryModuleContents.BINARY_MODULE_CONTENTS.BINARY_MODULE_ID)
                 .returning(BinaryModuleContents.BINARY_MODULE_CONTENTS.BINARY_MODULE_ID).fetchOne();
         return resultRecord.getValue(BinaryModuleContents.BINARY_MODULE_CONTENTS.BINARY_MODULE_ID);
-    }
-
-    /**
-     * Inserts multiple records in the 'binary_module_contents' table in the database.
-     *
-     * @param binaryModuleIds List of binary modules IDs
-     * @param fileIds         List of files IDs
-     * @return List of IDs of new records
-     * @throws IllegalArgumentException if lists are not of the same size
-     */
-    public List<Long> insertBinaryModuleContents(List<Long> binaryModuleIds, List<Long> fileIds)
-            throws IllegalArgumentException {
-        if (fileIds.size() != binaryModuleIds.size()) {
-            throw new IllegalArgumentException("Lists should have equal size");
-        }
-        int length = fileIds.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertBinaryModuleContent(binaryModuleIds.get(i), fileIds.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
     }
 
     /**
@@ -601,63 +528,38 @@ public class MetadataDao {
     }
 
     /**
-     * Insert multiple records in the 'files' table in the database.
-     *
-     * @param packageVersionId ID of the common package version
-     * @param pathsList        List of paths of files
-     * @param checksumsList    List of checksums of files
-     * @param createdAt        List of timestamps of files
-     * @param metadata         List of metadata of files
-     * @return List of IDs of new records
-     * @throws IllegalArgumentException if any of the lists have different size
-     */
-    public List<Long> insertFiles(long packageVersionId, List<String> pathsList,
-                                  List<byte[]> checksumsList, List<Timestamp> createdAt,
-                                  List<JSONObject> metadata) throws IllegalArgumentException {
-        if (pathsList.size() != checksumsList.size() || checksumsList.size() != createdAt.size()
-                || createdAt.size() != metadata.size()) {
-            throw new IllegalArgumentException("All lists should have equal size");
-        }
-        int length = pathsList.size();
-        var recordIds = new ArrayList<Long>(length);
-        for (int i = 0; i < length; i++) {
-            long result = insertFile(packageVersionId, pathsList.get(i), checksumsList.get(i),
-                    createdAt.get(i), metadata.get(i));
-            recordIds.add(result);
-        }
-        return recordIds;
-    }
-
-    /**
      * Inserts a record in the 'callables' table in the database.
      *
      * @param moduleId       ID of the module where the callable belongs (references 'modules.id')
      * @param fastenUri      URI of the callable in FASTEN
      * @param isInternalCall 'true' if call is internal, 'false' if external
-     * @param createdAt      Timestamp when the callable was created
      * @param lineStart      Line number where the callable starts
      * @param lineEnd        Line number where the callable ends
+     * @param type           Type of the callable
+     * @param defined        'true' of callable is defined, 'false' otherwise
+     * @param access         Access of the callable
      * @param metadata       Metadata of the callable
      * @return ID of the new record
      */
     public long insertCallable(Long moduleId, String fastenUri, boolean isInternalCall,
-                               Timestamp createdAt, Integer lineStart, Integer lineEnd,
+                               Integer lineStart, Integer lineEnd,
+                               CallableType type, boolean defined, Access access,
                                JSONObject metadata) {
         var metadataJsonb = metadata != null ? JSONB.valueOf(metadata.toString()) : null;
         var resultRecord = context.insertInto(Callables.CALLABLES,
                 Callables.CALLABLES.MODULE_ID, Callables.CALLABLES.FASTEN_URI,
-                Callables.CALLABLES.IS_INTERNAL_CALL, Callables.CALLABLES.CREATED_AT,
-                Callables.CALLABLES.LINE_START, Callables.CALLABLES.LINE_END,
-                Callables.CALLABLES.METADATA)
-                .values(moduleId, fastenUri, isInternalCall, createdAt, lineStart, lineEnd,
-                        metadataJsonb)
+                Callables.CALLABLES.IS_INTERNAL_CALL, Callables.CALLABLES.LINE_START,
+                Callables.CALLABLES.LINE_END, Callables.CALLABLES.TYPE, Callables.CALLABLES.DEFINED,
+                Callables.CALLABLES.ACCESS, Callables.CALLABLES.METADATA)
+                .values(moduleId, fastenUri, isInternalCall, lineStart, lineEnd, type, defined, access, metadataJsonb)
                 .onConflictOnConstraint(Keys.UNIQUE_URI_CALL).doUpdate()
                 .set(Callables.CALLABLES.MODULE_ID, Callables.CALLABLES.as("excluded").MODULE_ID)
-                .set(Callables.CALLABLES.CREATED_AT, Callables.CALLABLES.as("excluded").CREATED_AT)
                 .set(Callables.CALLABLES.LINE_START, Callables.CALLABLES.as("excluded").LINE_START)
                 .set(Callables.CALLABLES.LINE_END, Callables.CALLABLES.as("excluded").LINE_END)
-                .set(Callables.CALLABLES.METADATA, JsonbDSL.concat(Callables.CALLABLES.METADATA,
-                        Callables.CALLABLES.as("excluded").METADATA))
+                .set(Callables.CALLABLES.TYPE, Callables.CALLABLES.as("excluded").TYPE)
+                .set(Callables.CALLABLES.DEFINED, Callables.CALLABLES.as("excluded").DEFINED)
+                .set(Callables.CALLABLES.ACCESS, Callables.CALLABLES.as("excluded").ACCESS)
+                .set(Callables.CALLABLES.METADATA, field("coalesce(callables.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
                 .returning(Callables.CALLABLES.ID).fetchOne();
         return resultRecord.getValue(Callables.CALLABLES.ID);
     }
@@ -675,14 +577,13 @@ public class MetadataDao {
     public long updateCallableMetadata(Long moduleId, String fastenUri, boolean isInternal,
                                        JSONObject metadata) {
         var metadataJsonb = metadata != null
-                ? JSONB.valueOf(metadata.toString()) : JSONB.valueOf("{}");
+                ? JSONB.valueOf(metadata.toString()) : null;
         var resultRecord = context.insertInto(Callables.CALLABLES,
                 Callables.CALLABLES.MODULE_ID, Callables.CALLABLES.FASTEN_URI,
                 Callables.CALLABLES.IS_INTERNAL_CALL, Callables.CALLABLES.METADATA)
                 .values(moduleId, fastenUri, isInternal, metadataJsonb)
                 .onConflictOnConstraint(Keys.UNIQUE_URI_CALL).doUpdate()
-                .set(Callables.CALLABLES.METADATA, JsonbDSL.concat(Callables.CALLABLES.METADATA,
-                        Callables.CALLABLES.as("excluded").METADATA))
+                .set(Callables.CALLABLES.METADATA, field("coalesce(callables.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
                 .returning(Callables.CALLABLES.ID).fetchOne();
         return resultRecord.getValue(Callables.CALLABLES.ID);
     }
@@ -693,7 +594,6 @@ public class MetadataDao {
      * @param moduleId         ID of the common module
      * @param fastenUris       List of FASTEN URIs
      * @param areInternalCalls List of booleans that show if callable is internal
-     * @param createdAt        List of timestamps
      * @param lineStarts       List of line number where callable starts
      * @param lineEnds         List of line number where callable ends
      * @param metadata         List of metadata objects
@@ -701,41 +601,45 @@ public class MetadataDao {
      * @throws IllegalArgumentException if lists are not of the same size
      */
     public List<Long> insertCallables(long moduleId, List<String> fastenUris,
-                                      List<Boolean> areInternalCalls, List<Timestamp> createdAt,
+                                      List<Boolean> areInternalCalls,
                                       List<Integer> lineStarts, List<Integer> lineEnds,
-                                      List<JSONObject> metadata) throws IllegalArgumentException {
+                                      List<CallableType> types, List<Boolean> defined,
+                                      List<Access> accesses, List<JSONObject> metadata)
+            throws IllegalArgumentException {
         if (fastenUris.size() != areInternalCalls.size()
                 || areInternalCalls.size() != metadata.size()
-                || createdAt.size() != lineStarts.size()
-                || lineStarts.size() != lineEnds.size()
-                || metadata.size() != createdAt.size()) {
+                || metadata.size() != lineStarts.size()
+                || lineStarts.size() != lineEnds.size()) {
             throw new IllegalArgumentException("All lists should have equal size");
         }
         int length = fastenUris.size();
         var recordIds = new ArrayList<Long>(length);
         for (int i = 0; i < length; i++) {
             long result = insertCallable(moduleId, fastenUris.get(i),
-                    areInternalCalls.get(i), createdAt.get(i), lineStarts.get(i),
-                    lineEnds.get(i), metadata.get(i));
+                    areInternalCalls.get(i), lineStarts.get(i),
+                    lineEnds.get(i), types.get(i), defined.get(i), accesses.get(i), metadata.get(i));
             recordIds.add(result);
         }
         return recordIds;
     }
 
     /**
-     * Executes batch insert for 'edges' table.
+     * Executes batch insert for 'callsites' table.
      *
-     * @param edges List of edges records to insert
+     * @param callsites List of callsites records to insert
      */
-    public void batchInsertEdges(List<EdgesRecord> edges) {
-        var insert = context.insertInto(Edges.EDGES,
-                Edges.EDGES.SOURCE_ID, Edges.EDGES.TARGET_ID, Edges.EDGES.RECEIVERS, Edges.EDGES.METADATA);
-        for (var edge : edges) {
-            insert = insert.values(edge.getSourceId(), edge.getTargetId(), edge.getReceivers(), edge.getMetadata());
+    public void batchInsertEdges(List<CallSitesRecord> callsites) {
+        var insert = context.insertInto(CallSites.CALL_SITES,
+                CallSites.CALL_SITES.SOURCE_ID, CallSites.CALL_SITES.TARGET_ID, CallSites.CALL_SITES.CALL_TYPE,
+                CallSites.CALL_SITES.RECEIVER_TYPE_IDS, CallSites.CALL_SITES.LINE, CallSites.CALL_SITES.METADATA);
+        for (var call : callsites) {
+            insert = insert.values(call.getSourceId(), call.getTargetId(), call.getCallType(), call.getReceiverTypeIds(), call.getLine(), call.getMetadata());
         }
         insert.onConflictOnConstraint(Keys.UNIQUE_SOURCE_TARGET).doUpdate()
-                .set(Edges.EDGES.RECEIVERS, Edges.EDGES.as("excluded").RECEIVERS)
-                .set(Edges.EDGES.METADATA, field("coalesce(edges.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
+                .set(CallSites.CALL_SITES.CALL_TYPE, CallSites.CALL_SITES.as("excluded").CALL_TYPE)
+                .set(CallSites.CALL_SITES.RECEIVER_TYPE_IDS, CallSites.CALL_SITES.as("excluded").RECEIVER_TYPE_IDS)
+                .set(CallSites.CALL_SITES.LINE, CallSites.CALL_SITES.as("excluded").LINE)
+                .set(CallSites.CALL_SITES.METADATA, field("coalesce(call_sites.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
                 .execute();
     }
 
@@ -747,21 +651,24 @@ public class MetadataDao {
     public List<Long> batchInsertCallables(List<CallablesRecord> callables) {
         var insert = context.insertInto(Callables.CALLABLES,
                 Callables.CALLABLES.MODULE_ID, Callables.CALLABLES.FASTEN_URI,
-                Callables.CALLABLES.IS_INTERNAL_CALL, Callables.CALLABLES.CREATED_AT,
+                Callables.CALLABLES.IS_INTERNAL_CALL,
                 Callables.CALLABLES.LINE_START, Callables.CALLABLES.LINE_END,
+                Callables.CALLABLES.TYPE, Callables.CALLABLES.DEFINED, Callables.CALLABLES.ACCESS,
                 Callables.CALLABLES.METADATA);
         for (var callable : callables) {
             insert = insert.values(callable.getModuleId(), callable.getFastenUri(),
-                    callable.getIsInternalCall(), callable.getCreatedAt(),
-                    callable.getLineStart(), callable.getLineEnd(), callable.getMetadata());
+                    callable.getIsInternalCall(),
+                    callable.getLineStart(), callable.getLineEnd(), callable.getType(),
+                    callable.getDefined(), callable.getAccess(), callable.getMetadata());
         }
         var result = insert.onConflictOnConstraint(Keys.UNIQUE_URI_CALL).doUpdate()
                 .set(Callables.CALLABLES.MODULE_ID, Callables.CALLABLES.as("excluded").MODULE_ID)
-                .set(Callables.CALLABLES.CREATED_AT, Callables.CALLABLES.as("excluded").CREATED_AT)
                 .set(Callables.CALLABLES.LINE_START, Callables.CALLABLES.as("excluded").LINE_START)
                 .set(Callables.CALLABLES.LINE_END, Callables.CALLABLES.as("excluded").LINE_END)
-                .set(Callables.CALLABLES.METADATA, JsonbDSL.concat(Callables.CALLABLES.METADATA,
-                        Callables.CALLABLES.as("excluded").METADATA))
+                .set(Callables.CALLABLES.TYPE, Callables.CALLABLES.as("excluded").TYPE)
+                .set(Callables.CALLABLES.DEFINED, Callables.CALLABLES.as("excluded").DEFINED)
+                .set(Callables.CALLABLES.ACCESS, Callables.CALLABLES.as("excluded").ACCESS)
+                .set(Callables.CALLABLES.METADATA, field("coalesce(callables.metadata, '{}'::jsonb) || excluded.metadata", JSONB.class))
                 .returning(Callables.CALLABLES.ID).fetch();
         return result.getValues(Callables.CALLABLES.ID);
     }
@@ -856,9 +763,9 @@ public class MetadataDao {
 
     public void insertIngestedArtifact(String packageName, String version, Timestamp timestamp) {
         context.insertInto(IngestedArtifacts.INGESTED_ARTIFACTS,
-                        IngestedArtifacts.INGESTED_ARTIFACTS.PACKAGE_NAME,
-                        IngestedArtifacts.INGESTED_ARTIFACTS.VERSION,
-                        IngestedArtifacts.INGESTED_ARTIFACTS.TIMESTAMP)
+                IngestedArtifacts.INGESTED_ARTIFACTS.PACKAGE_NAME,
+                IngestedArtifacts.INGESTED_ARTIFACTS.VERSION,
+                IngestedArtifacts.INGESTED_ARTIFACTS.TIMESTAMP)
                 .values(packageName, version, timestamp)
                 .onConflictOnConstraint(Keys.UNIQUE_INGESTED_ARTIFACTS).doUpdate()
                 .set(IngestedArtifacts.INGESTED_ARTIFACTS.PACKAGE_NAME, IngestedArtifacts.INGESTED_ARTIFACTS.as("excluded").PACKAGE_NAME)
@@ -933,14 +840,16 @@ public class MetadataDao {
         Packages p = Packages.PACKAGES;
         PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
         Modules m = Modules.MODULES;
+        ModuleNames n = ModuleNames.MODULE_NAMES;
 
         Record selectModule = context
                 .select(m.fields())
                 .from(p)
                 .innerJoin(pv).on(p.ID.eq(pv.PACKAGE_ID))
                 .innerJoin(m).on(pv.ID.eq(m.PACKAGE_VERSION_ID))
+                .innerJoin(n).on(m.MODULE_NAME_ID.eq(n.ID))
                 .where(packageVersionWhereClause(name, version))
-                .and(m.NAMESPACE.equalIgnoreCase(namespace))
+                .and(n.NAME.equalIgnoreCase(namespace))
                 .fetchOne();
 
         return selectModule != null;
@@ -1148,12 +1057,13 @@ public class MetadataDao {
         Packages p = Packages.PACKAGES;
         PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
         Modules m = Modules.MODULES;
+        ModuleNames n = ModuleNames.MODULE_NAMES;
 
         // Select clause
-        SelectField<?>[] selectClause = new SelectField[]{p.PACKAGE_NAME, pv.VERSION, m.NAMESPACE, m.METADATA};
+        SelectField<?>[] selectClause = new SelectField[]{p.PACKAGE_NAME, pv.VERSION, n.NAME, m.METADATA};
 
         // Where clause
-        Condition whereClause = packageVersionWhereClause(packageName, packageVersion).and(m.NAMESPACE.equalIgnoreCase(moduleNamespace));
+        Condition whereClause = packageVersionWhereClause(packageName, packageVersion).and(n.NAME.equalIgnoreCase(moduleNamespace));
 
         // Building and executing the query
         var queryResult = context
@@ -1161,6 +1071,7 @@ public class MetadataDao {
                 .from(p)
                 .innerJoin(pv).on(p.ID.eq(pv.PACKAGE_ID))
                 .innerJoin(m).on(pv.ID.eq(m.PACKAGE_VERSION_ID))
+                .innerJoin(n).on(m.MODULE_NAME_ID.eq(n.ID))
                 .where(whereClause)
                 .limit(1)
                 .fetchOne();
@@ -1187,6 +1098,7 @@ public class MetadataDao {
         PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
         Modules m = Modules.MODULES;
         Files f = Files.FILES;
+        ModuleNames n = ModuleNames.MODULE_NAMES;
 
         // Query
         Result<Record> queryResult = context
@@ -1195,8 +1107,9 @@ public class MetadataDao {
                 .innerJoin(pv).on(p.ID.eq(pv.PACKAGE_ID))
                 .innerJoin(m).on(pv.ID.eq(m.PACKAGE_VERSION_ID))
                 .innerJoin(f).on(pv.ID.eq(f.PACKAGE_VERSION_ID))
+                .innerJoin(n).on(m.MODULE_NAME_ID.eq(n.ID))
                 .where(packageVersionWhereClause(packageName, packageVersion))
-                .and(m.NAMESPACE.equalIgnoreCase(moduleNamespace))
+                .and(n.NAME.eq(moduleNamespace))
                 .offset(offset)
                 .limit(limit)
                 .fetch();
@@ -1222,6 +1135,7 @@ public class MetadataDao {
         PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
         Modules m = Modules.MODULES;
         Callables c = Callables.CALLABLES;
+        ModuleNames n = ModuleNames.MODULE_NAMES;
 
         // Main Query
         Result<Record> queryResult = context
@@ -1230,8 +1144,9 @@ public class MetadataDao {
                 .innerJoin(pv).on(p.ID.eq(pv.PACKAGE_ID))
                 .innerJoin(m).on(pv.ID.eq(m.PACKAGE_VERSION_ID))
                 .innerJoin(c).on(m.ID.eq(c.MODULE_ID))
+                .innerJoin(n).on(m.MODULE_NAME_ID.eq(n.ID))
                 .where(packageVersionWhereClause(packageName, packageVersion))
-                .and(m.NAMESPACE.equalIgnoreCase(moduleNamespace))
+                .and(n.NAME.eq(moduleNamespace))
                 .offset(offset)
                 .limit(limit)
                 .fetch();
@@ -1259,8 +1174,8 @@ public class MetadataDao {
 
             try {
                 var uriObject = FastenUriUtils.parsePartialFastenUri(uri);
-                jObj.put("methodName", uriObject.get(2));
-                jObj.put("methodArgs", uriObject.get(3));
+                jObj.put("method_name", uriObject.get(2));
+                jObj.put("method_args", uriObject.get(3));
             } catch (IllegalArgumentException err) {
                 logger.warn("Error FASTEN URI Parser: " + err.toString());
             }
@@ -1566,7 +1481,7 @@ public class MetadataDao {
         PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
         Modules m = Modules.MODULES;
         Callables c = Callables.CALLABLES;
-        Edges e = Edges.EDGES;
+        CallSites e = CallSites.CALL_SITES;
 
         // Select clause
         SelectField<?>[] selectClause;
@@ -1699,31 +1614,22 @@ public class MetadataDao {
      * @return HashMap from Pair of IDs to metadata of the edge
      */
     public Map<Pair<Long, Long>, JSONObject> getEdgesMetadata(List<Pair<Long, Long>> edges) {
-        var whereClause = and(Edges.EDGES.SOURCE_ID.eq(edges.get(0).getFirst()))
-                .and(Edges.EDGES.TARGET_ID.eq(edges.get(0).getSecond()));
+        var whereClause = and(CallSites.CALL_SITES.SOURCE_ID.eq(edges.get(0).getFirst()))
+                .and(CallSites.CALL_SITES.TARGET_ID.eq(edges.get(0).getSecond()));
         for (int i = 1; i < edges.size(); i++) {
             whereClause = whereClause.or(
-                    and(Edges.EDGES.SOURCE_ID.eq(edges.get(i).getFirst()))
-                            .and(Edges.EDGES.TARGET_ID.eq(edges.get(i).getSecond()))
+                    and(CallSites.CALL_SITES.SOURCE_ID.eq(edges.get(i).getFirst()))
+                            .and(CallSites.CALL_SITES.TARGET_ID.eq(edges.get(i).getSecond()))
             );
         }
         var queryResult = context
-                .select(Edges.EDGES.SOURCE_ID, Edges.EDGES.TARGET_ID, Edges.EDGES.RECEIVERS, Edges.EDGES.METADATA)
-                .from(Edges.EDGES)
+                .select(CallSites.CALL_SITES.SOURCE_ID, CallSites.CALL_SITES.TARGET_ID, CallSites.CALL_SITES.METADATA)
+                .from(CallSites.CALL_SITES)
                 .where(whereClause)
                 .fetch();
         var metadataMap = new HashMap<Pair<Long, Long>, JSONObject>(queryResult.size());
         for (var record : queryResult) {
-            var json = new JSONObject(record.value4().data());
-            var receiversJson = new JSONArray();
-            for (var receiver : record.value3()) {
-                var receiverJson = new JSONObject();
-                receiverJson.put("line", receiver.value1());
-                receiverJson.put("type", receiver.value2().getLiteral());
-                receiverJson.put("receiver_uri", receiver.value3());
-            }
-            json.put("receivers", receiversJson);
-            metadataMap.put(new Pair<>(record.value1(), record.value2()), json);
+            metadataMap.put(new Pair<>(record.value1(), record.value2()), new JSONObject(record.value3().data()));
         }
         return metadataMap;
     }
@@ -1790,8 +1696,23 @@ public class MetadataDao {
     }
 
     public String searchPackageNames(String searchName, int offset, int limit) {
-        var result = context
-                .fetch("select * from packages where package_name like ? offset ? limit ?", "%" + searchName + "%", offset, limit);
+
+        Packages p = Packages.PACKAGES;
+        PackageVersions pv = PackageVersions.PACKAGE_VERSIONS;
+
+        // Query
+        Result<Record> result = context
+                .select(p.fields())
+                .from(p)
+                .where(
+                    exists(context.select(p.ID).from(p).where(p.ID.eq(pv.PACKAGE_ID)).limit(1))
+                    .and(p.PACKAGE_NAME.like("%" + searchName + "%"))
+                )
+                .offset(offset)
+                .limit(limit)
+                .fetch();
+
+        // Returning the result
         logger.debug("Total rows: " + result.size());
         return result.formatJSON(new JSONFormat().format(true).header(false).recordFormat(JSONFormat.RecordFormat.OBJECT).quoteNested(false));
     }
@@ -1936,4 +1857,17 @@ public class MetadataDao {
         return ("dummy updateCg query OK!");
     }
 
+    public Map<String, Long> insertNamespaces(Collection<String> namespaces) {
+        var insert = context.insertInto(ModuleNames.MODULE_NAMES, ModuleNames.MODULE_NAMES.NAME);
+        for (var namespace : namespaces) {
+            insert = insert.values(namespace);
+        }
+        var result = insert.onConflictOnConstraint(Keys.UNIQUE_MODULE_NAMES).doUpdate()
+                .set(ModuleNames.MODULE_NAMES.NAME, ModuleNames.MODULE_NAMES.as("excluded").NAME)
+                .returning(ModuleNames.MODULE_NAMES.ID, ModuleNames.MODULE_NAMES.NAME)
+                .fetch();
+        var map = new HashMap<String, Long>(result.size());
+        result.forEach(r -> map.put(r.getName(), r.getId()));
+        return map;
+    }
 }
